# tokenizer

./: .gitignore  README.md
assets/: metadata.json
code/src/: Cargo.toml  lib.rs
code/test/: create-token.ts  helper.ts  package-lock.json  package.json  transfer.ts  tsconfig.json
deployment/: tokenizer-keypair.json
documentation/: Tokenomics.md  architecture.md
