[package]
name = "tokenizer"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.3"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.1"
borsh = "1.6.1"

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []
default = []

[lib]
crate-type = ["cdylib", "lib"]